# dvfopt

./: .gitignore  CLAUDE.md  README.md  _update_notebooks_output.py  benchmark-serial-vs-parallel.ipynb  correct-ants-warps.ipynb  generate_readme_images.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-parallel-corrections.ipynb  setup-venv.bat  slsqp-full-modified test runtimes.ipynb  test-injectivity-constraint.ipynb  test-shoelace-constraint.ipynb  voxelmorph-registration.ipynb
.claude/: settings.local.json
.github/: copilot-instructions.md
benchmarks/: README.md  benchmark-constraint-modes.ipynb  benchmark-folding-severity.ipynb  benchmark-l2-jdet-correlation.ipynb  benchmark-registration-methods.ipynb  benchmark-scalability.ipynb  benchmark-serial-vs-parallel.ipynb  benchmark_utils.py  correct-ants-warps.ipynb  elastix-registration.ipynb  opencv-optflow-registration.ipynb  transmorph-registration.ipynb  voxelmorph-registration.ipynb
dvfopt/: __init__.py  _defaults.py  testcases.py
laplacian/: __init__.py  correspondence.py  solver.py  utils.py
modules/: checkerboard.py  dvfopt.py  dvfopt_parallel.py  dvfviz.py  transform_utils.py
notebooks/: debug-iterative.ipynb  shoelace-artifact-example.ipynb  slsqp-3d.ipynb  slsqp-iterative-refactored.ipynb  test-global-folding.ipynb  test-shoelace-constraint.ipynb  triangle-jdet-criterion.ipynb
scripts/: _add_cd_baseline.py  _add_closeup_cells.py  _add_tri_to_cmodes.py  _add_triangulated_section.py  _expand_tri_formula.py  _find_3d_crops.py  _fix_ift_md.py  _fix_nb_citations.py  _make_comparison_nb.py  (+24 more)
(+173 files in other folders)
